# CreativePlanner

./: .dockerignore  .env.selfhost.example  .gitignore  DEPLOY.md  Dockerfile  PLAN.md  README.md  SELFHOST.md  TRANSLATION_AUDIT.md  TRANSLATION_RESOURCE_FORMAT.md  docker-compose.selfhost.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
backend/: .dev.vars.example  Dockerfile  migration_banner_image.sql  migration_bootstrap_admin.sql  migration_chat_features.sql  migration_chat_profile.sql  migration_collab.sql  migration_friends_discriminator.sql  migration_google_signup.sql  migration_invites.sql  migration_presence.sql  migration_profile_about.sql  package-lock.json  package.json  schema.sql  wrangler.toml
backend/src/: worker.js
deploy/selfhost/: backend-entrypoint.sh  nginx.conf  update-watcher.sh
scripts/: install-ubuntu.sh  install.sh  update-selfhost.sh  update.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: main.css  page.tsx
src/components/: AppDialogs.tsx  AppFontManager.tsx  AppLanguageManager.tsx  AppPageTranslationManager.tsx  ClientLayout.tsx  ColorPicker.tsx  ContextMenu.tsx  FileBrowser.tsx  FileTree.tsx  FontPickerPanel.tsx  GroupDetails.tsx  GroupNode.tsx  Header.tsx  IdeasPanel.tsx  MindMap.tsx  MindMapAttachments.tsx  MindMapEdge.tsx  MindMapNode.tsx  MindMapNotes.tsx  MindmapNodePresence.tsx  MindmapShareModal.tsx  MindmapTasksPanel.tsx  Modal.tsx  (+19 more)
(+85 files in other folders)
